--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 
 <div class="teaserimage">
@@ -23,7 +24,7 @@ layout: default
             &nbsp;&nbsp;·&nbsp;&nbsp;
         {% endif %}
       {% endfor %}
-      <a href="/about/">About</a>
+      <a href="/about/">Sobre mí</a>
     </div>
 </header>
 
