--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ published: true
         {% endif %}
       {% endfor %}
 
-      <a href="/about/">Sobre mí</a>
+      <a href="/sobre-mi/">Sobre mí</a>
 
     </div>
 </header>
